# atlas_egui

./: .gitignore  Cargo.toml
example/: project.ron
src/: app.rs  main.rs  utils.rs
src/analysis/: mod.rs  stackup.rs
src/config/: feature.rs  mate.rs  mod.rs
src/file/: analysis.rs  mod.rs
src/input/: analysis.rs  command.rs  component.rs  feature.rs  mate.rs  mod.rs  project.rs
src/state/: analysis_state.rs  input_state.rs  mate_state.rs  mod.rs  project_state.rs  ui_state.rs
src/ui/: analysis.rs  components.rs  dependency_matrix.rs  dialog.rs  dialog_widgets.rs  git_control.rs  mates.rs  mod.rs  project.rs
