[package]
name = "atlas-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = { version = "0.24.0", features = ["persistence"] }  # Includes egui
winapi = { version = "0.3", features = ["winuser", "windef"] }
egui_plot = "0.24.0"  # For visualization

# Core functionality
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.18"
notify = "6.1"
config = "0.13"
uom = "0.35.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.1"
rand = "0.8.5"
rand_distr = "0.4.3"
anyhow = "1.0"
petgraph = "0.6.5"

ratatui = "0.24.0"
crossterm = "0.27.0"
tui-input = "0.8.0"
statrs = "0.18.0"
rfd = "0.15.2"
