[package]
name = "atlas-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = { version = "0.24.0", features = ["persistence"] }  # Includes egui
winapi = { version = "0.3", features = ["winuser"] }
egui_plot = "0.24.0"  # For visualization support

# Core functionality
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rfd = "0.15.2"  # File dialogs
csv = "1.1"

# Analysis functionality
petgraph = "0.6.5"  # For dependency graphs
rand = "0.8.5"
rand_distr = "0.4.3"
statrs = "0.18.0"